force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/Program_Master__c.object-meta.xml
<CustomObject>
    <label>Plant Program Code</label>
    <nameField>
        <displayFormat>PPC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Program Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>