force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/Auth_Region__c.field-meta.xml
<CustomField>
    <fullName>Auth_Region__c</fullName>
    <description>GWB Region of Plant Program Code. This should be taken from Plant.</description>
    <inlineHelpText>GWB Region of Plant Program Code. This should be taken from Plant.</inlineHelpText>
    <label>Auth Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GWB_Region</valueSetName>
    </valueSet>
</CustomField>