force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/MVP__c.field-meta.xml
<CustomField>
    <fullName>MVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MVP</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Program Masters</relationshipLabel>
    <relationshipName>Program_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>