force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/MVP_Sector__c.field-meta.xml
<CustomField>
    <fullName>MVP_Sector__c</fullName>
    <label>MVP Sector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>