force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/Name_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Name_Product_Type__c</fullName>
    <formula>Plant_Name__r.Name +&apos;-&apos;+ TEXT(Product_Type__c) +&apos;-&apos;+ Program_Code__c</formula>
    <label>Name Product Type</label>
    <type>Text</type>
</CustomField>