force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Type__c</fullName>
    <label>Part Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>