force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Auth Plant Name</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Program Master</relationshipLabel>
    <relationshipName>Program_Master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>