force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/Prgram_Code__c.field-meta.xml
<CustomField>
    <fullName>Prgram_Code__c</fullName>
    <formula>Program_Code_Master__r.ProgramCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Code</label>
    <type>Text</type>
</CustomField>