force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/Program_Code_Master__c.field-meta.xml
<CustomField>
    <fullName>Program_Code_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Code Master</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plant_Program_Code__c.Ready_for_Plant_Assignment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plant_Program_Code__c</referenceTo>
    <relationshipLabel>Program Master</relationshipLabel>
    <relationshipName>Program_Master</relationshipName>
    <type>Lookup</type>
</CustomField>