force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/Ready_for_Plant_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Plant_Assignment__c</fullName>
    <formula>Program_Code_Master__r.Ready_for_Plant_Assignment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for Plant Assignment</label>
    <type>Checkbox</type>
</CustomField>