force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/fields/Search_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Search_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Search Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>