force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/recordTypes/Part_Type.recordType-meta.xml
<RecordType>
    <fullName>Part_Type</fullName>
    <active>true</active>
    <label>Part Type</label>
</RecordType>