force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/recordTypes/Plant_Program_Code.recordType-meta.xml
<RecordType>
    <fullName>Plant_Program_Code</fullName>
    <active>true</active>
    <label>Plant Program Code</label>
</RecordType>