force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/recordTypes/Program_Code.recordType-meta.xml
<RecordType>
    <fullName>Program_Code</fullName>
    <active>true</active>
    <label>Program Code</label>
</RecordType>