force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Program_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant_Name__c</columns>
    <columns>Sector__c</columns>
    <columns>Product__c</columns>
    <columns>Program_Code__c</columns>
    <columns>MVP__c</columns>
    <columns>MVP_Sector__c</columns>
    <columns>Ready_for_Plant_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>